--- a/data/settings.properties
+++ b/data/settings.properties
@@ -5,8 +5,10 @@ theme.color.Priority.HIGH=-65281
 date.use_start_time=true
 theme.color.Priority.MEDIUM=-16776961
 Date.date_Format=MMM/E/yyyy
+#date.date_format=dd/MM/yyyy
 Date.time_Format=hh\:mm aa
 theme.color.Priority.LOW=-16711936
 theme.color.Priority.TOP=-65536
 tasktable.tasks.selected.value=New Task
 tasktable.row.high=30
+tasksearcher.show_completed_tasks=true
