--- a/data/settings.properties
+++ b/data/settings.properties
@@ -1,14 +1,14 @@
-#Fri Apr 12 00:31:20 AST 2013
+#Thu Sep 05 00:21:24 AST 2013
 general.show_reminders.enabled=true
 theme.color.Priority.NEGATIVE=-16777216
 theme.color.Priority.HIGH=-65281
 date.use_start_time=true
 theme.color.Priority.MEDIUM=-16776961
+tasksearcher.show_completed_tasks=true
 Date.date_Format=MMM/E/yyyy
-#date.date_format=dd/MM/yyyy
-Date.time_Format=hh\:mm aa
 theme.color.Priority.LOW=-16711936
+Date.time_Format=hh\:mm aa
 theme.color.Priority.TOP=-65536
 tasktable.tasks.selected.value=New Task
 tasktable.row.high=30
-tasksearcher.show_completed_tasks=true
+Date.Date_Format=dd-MMM-yyy
